# Topomap

./: .gitignore  CMakeLists.txt  README.md  build_bin.sh  run.sh  setup_keys.sh
.github/workflows/: flawfinder.yml
docs/: ARCHITECTURE.md
include/: command_engine.h  command_utils.h  diff.h  hashmap.h  map.h  scanner.h  schemas.h  session.h  snapshot.h  snapshot_io.h  surveyor.h  wire.h
scripts/: setup_keys.sh
src/: command_engine.c  command_utils.c  commands.c  control_main.c  diff.c  hashmap.c  map.c  scanner.c  schemas.c  session.c  snapshot_io.c  surveyor.c  surveyor_main.c  wire.c
